增加速度機制

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
                 <p>存活時間: <span id="finalTime">0</span> 秒</p>
                 <button id="restartBtn">重新開始</button>
             </div>
+
+            <!-- 勝利畫面 -->
+            <div id="winScreen">
+                <h1>🎉 勝利！🎉</h1>
+                <p>你成功躲避保險員 5 分鐘！</p>
+                <p>存活時間: <span id="winTime">0</span> 秒</p>
+                <button id="winRestartBtn">再玩一次</button>
+            </div>
         </div>
     </div>
 
