新增增生模式

--- a/index.html
+++ b/index.html
@@ -303,20 +303,20 @@
                 <button class="play-btn">開始遊戲</button>
             </div>
 
-            <!-- 未來遊戲模式 1 -->
-            <div class="game-card coming-soon">
+            <!-- 增生模式 (Game 2) -->
+            <div class="game-card active" onclick="window.location.href='game2/game2.html'">
                 <div class="game-icon">👻</div>
-                <h2 class="game-title">多人模式</h2>
+                <h2 class="game-title">增生模式</h2>
                 <p class="game-description">
-                    面對多個保險員的圍攻，每個都有不同的追捕策略和速度。
+                    保險員會越來越多！每 20 秒增加一個保險員，最多同時面對 3 個追捕者。
                 </p>
                 <ul class="game-features">
-                    <li>3 個保險員同時追捕</li>
-                    <li>不同 AI 行為模式</li>
-                    <li>更複雜的迷宮地圖</li>
+                    <li>每 20 秒增加 1 個保險員</li>
+                    <li>最多 3 個保險員</li>
+                    <li>目標：存活 5 分鐘</li>
                     <li>難度：★★★★☆</li>
                 </ul>
-                <div class="coming-soon-badge">即將推出</div>
+                <button class="play-btn">開始遊戲</button>
             </div>
 
             <!-- 未來遊戲模式 2 -->
