新增包裹模式

--- a/index.html
+++ b/index.html
@@ -319,20 +319,20 @@
                 <button class="play-btn">開始遊戲</button>
             </div>
 
-            <!-- 未來遊戲模式 2 -->
-            <div class="game-card coming-soon">
-                <div class="game-icon">⚡</div>
-                <h2 class="game-title">時間挑戰</h2>
+            <!-- 採集模式 (Game 3) -->
+            <div class="game-card active" onclick="window.location.href='game3/game3.html'">
+                <div class="game-icon">📦</div>
+                <h2 class="game-title">採集模式</h2>
                 <p class="game-description">
-                    限時關卡模式，需要在最短時間內完成特定目標。
+                    在躲避保險員的同時，必須收集隨機出現的包裹！每個包裹只有10秒時間收集。
                 </p>
                 <ul class="game-features">
-                    <li>收集道具解鎖出口</li>
-                    <li>計時排行榜系統</li>
-                    <li>特殊能力道具</li>
-                    <li>難度：★★★★★</li>
+                    <li>包裹每 15 秒隨機出現</li>
+                    <li>10 秒內必須收集</li>
+                    <li>目標：存活 5 分鐘</li>
+                    <li>難度：★★★☆☆</li>
                 </ul>
-                <div class="coming-soon-badge">即將推出</div>
+                <button class="play-btn">開始遊戲</button>
             </div>
         </div>
 
