新增驚喜模式

--- a/index.html
+++ b/index.html
@@ -334,6 +334,22 @@
                 </ul>
                 <button class="play-btn">開始遊戲</button>
             </div>
+
+            <!-- 驚喜模式 (Game 4) -->
+            <div class="game-card active" onclick="window.location.href='game4/game4.html'">
+                <div class="game-icon">👻</div>
+                <h2 class="game-title">驚喜模式</h2>
+                <p class="game-description">
+                    保險員會神出鬼沒！出現 8 秒後消失 2 秒，然後在隨機地點重新出現，讓你難以掌握他的節奏。
+                </p>
+                <ul class="game-features">
+                    <li>保險員出現 8 秒，消失 2 秒</li>
+                    <li>每次出現位置隨機</li>
+                    <li>目標：存活 5 分鐘</li>
+                    <li>難度：★★★★☆</li>
+                </ul>
+                <button class="play-btn">開始遊戲</button>
+            </div>
         </div>
 
         <footer>
