--- a/game2/game2.html
+++ b/game2/game2.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#2e3933">
-    <title>躲避保險員 - 增生模式</title>
+    <title>各為「保保」，上車囉 - 增生模式</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
                 <div class="intro">
                     <h2>遊戲玩法</h2>
                     <p>⌨️ 鍵盤方向鍵 / 🖱️ 滑鼠移動 / 👆 觸控移動 來控制角色</p>
-                    <p>躲避保險員的追捕，盡可能存活更長時間！</p>
+                    <p>給你5分鐘，究竟保了多少呢！</p>
                     <p style="color: #ffd700; font-weight: bold;">⚠️ 每 20 秒增加一個保險員（最多 3 個）</p>
                 </div>
                 <div class="characters">
@@ -70,7 +70,7 @@
             <!-- 勝利畫面 -->
             <div id="winScreen">
                 <h1>🎉 勝利！🎉</h1>
-                <p>你成功躲避保險員 5 分鐘！</p>
+                <p>保險投入未超支</p>
                 <p>存活時間: <span id="winTime">0</span> 秒</p>
                 <div class="button-group">
                     <button id="winHomeBtn" class="secondary-btn">回首頁</button>
