--- a/game3/game3.html
+++ b/game3/game3.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#2e3933">
-    <title>躲避保險員 - 採集模式</title>
+    <title>各為「保保」，上車囉  - 採集模式</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,8 +20,8 @@
                 <div class="intro">
                     <h2>遊戲玩法</h2>
                     <p>⌨️ 鍵盤方向鍵 / 🖱️ 滑鼠移動 / 👆 觸控移動 來控制角色</p>
-                    <p>躲避保險員的追捕，並在10秒內收集隨機出現的包裹！</p>
-                    <p>包裹每15秒出現一次，未能及時收集將失敗。</p>
+                    <p>給你5分鐘，究竟保了多少呢！</p>
+                    <p style="color: #ffd700; font-weight: bold;">⚠️ 包裹每15秒出現一次，未能及時收集將失敗。</p>
                 </div>
                 <div class="characters">
                     <div class="character">
@@ -72,7 +72,7 @@
             <!-- 勝利畫面 -->
             <div id="winScreen">
                 <h1>🎉 勝利！🎉</h1>
-                <p>你成功躲避保險員 5 分鐘！</p>
+                <p>保險投入未超支</p>
                 <p>存活時間: <span id="winTime">0</span> 秒</p>
                 <div class="button-group">
                     <button id="winHomeBtn" class="secondary-btn">回首頁</button>
