--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#2e3933">
-    <title>躲避保險員 - 遊戲選單</title>
+    <title>各為「保保」，上車囉</title>
     <style>
         * {
             margin: 0;
@@ -282,7 +282,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>躲避保險員</h1>
+            <h1>小保扛一劫，大保保時捷</h1>
             <p class="subtitle">選擇你的挑戰模式</p>
         </header>
 
@@ -305,7 +305,7 @@
 
             <!-- 增生模式 (Game 2) -->
             <div class="game-card active" onclick="window.location.href='game2/game2.html'">
-                <div class="game-icon">👻</div>
+                <div class="game-icon">🧑‍🤝‍🧑</div>
                 <h2 class="game-title">增生模式</h2>
                 <p class="game-description">
                     保險員會越來越多！每 20 秒增加一個保險員，最多同時面對 3 個追捕者。
@@ -337,7 +337,7 @@
 
             <!-- 驚喜模式 (Game 4) -->
             <div class="game-card active" onclick="window.location.href='game4/game4.html'">
-                <div class="game-icon">👻</div>
+                <div class="game-icon">✨</div>
                 <h2 class="game-title">驚喜模式</h2>
                 <p class="game-description">
                     保險員會神出鬼沒！出現 8 秒後消失 2 秒，然後在隨機地點重新出現，讓你難以掌握他的節奏。
@@ -346,14 +346,14 @@
                     <li>保險員出現 8 秒，消失 2 秒</li>
                     <li>每次出現位置隨機</li>
                     <li>目標：存活 5 分鐘</li>
-                    <li>難度：★★★★☆</li>
+                    <li>難度：★★★★★</li>
                 </ul>
                 <button class="play-btn">開始遊戲</button>
             </div>
         </div>
 
         <footer>
-            <p>© 2025 躲避保險員 - Insurance Ghost</p>
+            <p>© 2025 各為「保保」，上車囉</p>
             <p>使用鍵盤方向鍵、滑鼠或觸控控制角色</p>
         </footer>
     </div>
