--- a/game1/game1.html
+++ b/game1/game1.html
@@ -78,7 +78,7 @@
     </div>
 
     <script src="game1.js"></script>
-    <audio id="bgm" src="/audio/music.mp3" autoplay loop muted style="display: none;"></audio>
+    <audio id="bgm" src="../audio/music.mp3" autoplay loop muted style="display: none;"></audio>
 
     <script>
     window.addEventListener('click', () => {
