--- a/game2/game2.html
+++ b/game2/game2.html
@@ -81,7 +81,7 @@
     </div>
 
     <script src="game2.js"></script>
-    <audio id="bgm" src="/audio/music.mp3" autoplay loop muted style="display: none;"></audio>
+    <audio id="bgm" src="../audio/music.mp3" autoplay loop muted style="display: none;"></audio>
 
     <script>
     window.addEventListener('click', () => {
