--- a/game3/game3.html
+++ b/game3/game3.html
@@ -83,7 +83,7 @@
     </div>
 
     <script src="game3.js"></script>
-    <audio id="bgm" src="/audio/music.mp3" autoplay loop muted style="display: none;"></audio>
+    <audio id="bgm" src="../audio/music.mp3" autoplay loop muted style="display: none;"></audio>
 
     <script>
     window.addEventListener('click', () => {
