增加遊戲教學頁面

--- a/index.html
+++ b/index.html
@@ -350,6 +350,22 @@
                 </ul>
                 <button class="play-btn">開始遊戲</button>
             </div>
+
+            <!-- 遊戲撰寫教學 -->
+            <div class="game-card active" onclick="window.location.href='lcode/lcode.html'">
+                <div class="game-icon">📚</div>
+                <h2 class="game-title">遊戲撰寫教學</h2>
+                <p class="game-description">
+                    從零開始學習如何撰寫這個遊戲！詳細講解計分邏輯、碰撞檢測、AI 系統等核心技術。
+                </p>
+                <ul class="game-features">
+                    <li>7 大章節完整教學</li>
+                    <li>程式碼範例含註解</li>
+                    <li>互動式視覺化示範</li>
+                    <li>適合：初學者到進階</li>
+                </ul>
+                <button class="play-btn">前往教學</button>
+            </div>
         </div>
 
         <footer>
